# crewai_rag

./: .env  README.md  pyproject.toml
chroma_db/: chroma.sqlite3
src/crewai_rag/: __init__.py  agents.py  crew_setup.py  file_selector.py  main.py  main.txt  tasks.py
src/crewai_rag/tools/: text_search_tool.py
